--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 target/generated-sources
 target/classes
-/target/test-classes/*
+target/test-classes
+target/surefire-reports
+target/generated-test-sources
+src/test
