--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,5 +1,15 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_ADMIN_USERNAME}
+spring.datasource.password=${DATABASE_ADMIN_PASSWORD}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-server.port=443
+server.port=${SERVER_PORT}
+
+server.ssl.key-store-type=${KEY_STORE_TYPE}
+server.ssl.key-store=${KEYSTORE_PATH}
+server.ssl.key-store-password=${KEYSTORE_PASSWORD}
+server.ssl.key-alias=${KEY_ALIAS}
+
+logging.file.path=${LOGGER_PATH}
+logging.file.name=${LOGGER_NAME}
