--- a/src/main/resources/application-alex.properties
+++ b/src/main/resources/application-alex.properties
@@ -13,3 +13,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 
+#server.ssl.key-store-type=${KEY_STORE_TYPE}
+#server.ssl.key-store=${KEYSTORE_PATH}
+#server.ssl.key-store-password=${KEYSTORE_PASSWORD}
+#server.ssl.key-alias=${KEY_ALIAS}
+#
+#logging.file.path=${LOGGER_PATH}
+#logging.file.name=${LOGGER_NAME}
