--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,39 @@
+HELP.md
 target/generated-sources
 target/classes
 target/test-classes
 target/surefire-reports
 target/generated-test-sources
 src/test
+#target/
+#!.mvn/wrapper/maven-wrapper.jar
+#!**/src/main/**/target/
+#!**/src/test/**/target/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+#build/
+#!**/src/main/**/build/
+#!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
