Fully functional google signin/signup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,16 @@ app.jwt-expiration-milliseconds=604800000
 # oauth2
 spring.security.oauth2.client.registration.google.client-id=100732516280-3uqf9q6kfjcd22688age9gf2l8ju43hg.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/api/v1/auth/google_login
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/api/v1/auth/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.client-name=Google
-spring.security.oauth2.client.registration.google.scope=openid,email, profile
+spring.security.oauth2.client.registration.google.scope=email,profile,openid
 spring.security.oauth2.client.registration.google.client-authentication-method=basic
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
 spring.security.oauth2.client.provider.google.issuer-uri=https://accounts.google.com
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://www.googleapis.com/service_accounts/v1/jwk/securetoken%40system.gserviceaccount.com
+spring.security.oauth2.client.provider.google.token-uri=https://accounts.google.com/o/oauth2/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=email
 
 # oauth2 to jwt (bearer token)
 jwt.private.key=classpath:app.key
