Google Fetch profile fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,10 @@ spring.security.oauth2.client.registration.google.client-authentication-method=b
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
 spring.security.oauth2.client.provider.google.issuer-uri=https://accounts.google.com
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://www.googleapis.com/service_accounts/v1/jwk/securetoken%40system.gserviceaccount.com
-spring.security.oauth2.client.provider.google.token-uri=https://accounts.google.com/o/oauth2/token
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=email
+
 
 # oauth2 to jwt (bearer token)
 jwt.private.key=classpath:app.key
