--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.security.oauth2.client.provider.google.user-name-attribute=email
 # oauth2 to jwt (bearer token)
 jwt.private.key=classpath:app.key
 jwt.public.key=classpath:app.pub
+
+# Firebase Configuration
+firebase.credentials-file=docconnect-656c2-firebase-adminsdk-jdl43-6a82e1b511.json
