ultra important fix

--- a/src/main/resources/application-daniel.properties
+++ b/src/main/resources/application-daniel.properties
@@ -3,6 +3,9 @@ logging.level.org.springframework.security=TRACE
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=root
 spring.datasource.password=hangman96z
+#spring.datasource.url=jdbc:mysql://mysqlfs-test-yellow-dcojgstq.mysql.database.azure.com:3306/doc_connect_db
+#spring.datasource.username=backend_api
+#spring.datasource.password=phv96QWDNheTK!#aK$DcB2spm
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
