--- a/src/main/resources/application-alex.properties
+++ b/src/main/resources/application-alex.properties
@@ -10,7 +10,19 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-
+# oauth2
+spring.security.oauth2.client.registration.google.client-id=100732516280-3uqf9q6kfjcd22688age9gf2l8ju43hg.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/api/v1/auth/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.client-name=Google
+spring.security.oauth2.client.registration.google.scope=email,profile,openid
+spring.security.oauth2.client.registration.google.client-authentication-method=basic
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.issuer-uri=https://accounts.google.com
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://www.googleapis.com/service_accounts/v1/jwk/securetoken%40system.gserviceaccount.com
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=email
 
 
 #server.ssl.key-store-type=${KEY_STORE_TYPE}
