--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_ADMIN_USERNAME}
-spring.datasource.password=${DATABASE_ADMIN_PASSWORD}
+#spring.datasource.url=${DATABASE_URL}
+#spring.datasource.username=${DATABASE_ADMIN_USERNAME}
+#spring.datasource.password=${DATABASE_ADMIN_PASSWORD}
 
-server.port=${SERVER_PORT}
+#server.port=${SERVER_PORT}
 
 # oauth2
 spring.security.oauth2.client.registration.google.client-id=100732516280-3uqf9q6kfjcd22688age9gf2l8ju43hg.apps.googleusercontent.com
