adding redirect urls in application.properties profiles

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -20,3 +20,8 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://www.googleapis.com
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=email
+
+# localhost urls
+redirect.uri=http://localhost:5173
+confirm.email.uri=http://localhost:5173/auth/confirm?token=
+reset.password.uri=http://localhost:5173/auth/reset?token=
