--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -17,3 +17,8 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://www.googleapis.com
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=email
+
+# server urls
+redirect.uri=https://docconnect-yellow.test.devsmm.com
+confirm.email.uri=https://docconnect-yellow.test.devsmm.com/auth/confirm?token=
+reset.password.uri=https://docconnect-yellow.test.devsmm.com/auth/reset?token=
