--- a/src/main/resources/application-daniel.properties
+++ b/src/main/resources/application-daniel.properties
@@ -27,5 +27,9 @@ spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapi
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=email
 
+# localhost urls
+redirect.uri=http://localhost:5173
+confirm.email.uri=http://localhost:5173/auth/confirm?token=
+reset.password.uri=http://localhost:5173/auth/reset?token=
 
 
