Fixing google auth redirect uri for test env

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,7 +7,7 @@
 # oauth2
 spring.security.oauth2.client.registration.google.client-id=100732516280-3uqf9q6kfjcd22688age9gf2l8ju43hg.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.redirect-uri=https://docconnect-yellow.test.devsmm.com/api/v1/auth/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=https://docconnect-yellow-api.test.devsmm.com/api/v1/auth/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.client-name=Google
 spring.security.oauth2.client.registration.google.scope=email,profile,openid
 spring.security.oauth2.client.registration.google.client-authentication-method=basic
